devel
-----

* Added startup option `--query.optimizer-rules` to selectively enable or disable
  optimizer rules by default. The option can be specified multiple times, and takes
  the same input as the query option of the same name. 
  
  For example, to turn off the rule _use-indexes-for-sort_, use

      --query.optimizer-rules "-use-indexes-for-sort"

  The purpose of this option is to be able to enable potential future experimental
  optimizer rules, which may be shipped in a disabled-by-default state.

* Allow the AQL query optimizer to remove the DistributeNodes for several data-modification
  queries. So far, only REMOVE queries benefitted. Now the optimization can also be
  applied for REPLACE and UPDATE queries in case the query does not use LIMIT and
  there is no further cluster-internal communication after the REMOVE, REPLACE or UPDATE 
  node. 

* Include ArangoSearch data in hotbackups.

* Allow to restore 3.5 hotbackups in 3.6.

* Fixed ArangoSearch index removes being discarded on commiting consolidation results with
  pending removes after some segments under consolidation were already committed 

* Fixed an issue where removeServer left bihind current coordinators

* Allow usage of AQL function `RANDOM_TOKEN` with an argument value of `0`. This
  now produces an empty string, whereas in older versions this threw an invalid
  value exception.

* Add startup option `--rocksdb.exclusive-writes` to avoid write-write conflicts.

  This options allows for an easier transition from MMFiles to the RocksDB storage
  engine, but comes with a big performance penalty as all collections will be locked
  exclusively for writes.

* Added new timeout option for AQL queries. If a query does not finish execution
  within the given time in seconds it will be killed.

* Fixed undefined behaviour with creation of ArangoSearch links with custom
  analyzers in cluster environment.

* Fixed internal issue #651: analyzer duplication in _analyzers collection.
